--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
   
 <!-- !PAGE CONTENT! -->
 <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
-    
+
     <div class="w3-section w3-bottombar w3-padding-16">
-    <span class="w3-margin-right">Filter:</span> 
+    <span class="w3-margin-center">Filter:</span> 
         <div id="myBtnContainer">
             <button class="w3-button w3-black" onclick="filterSelection('all')">ALL</button>
-            <button class="w3-button w3-white" onclick="filterSelection('design')"><i class="fa fa-puzzle-piece w3-margin-right"></i>Design</button>
-            <button class="w3-button w3-white" onclick="filterSelection('watercolor')"><i class="fa fa-pencil-square-o w3-margin-right"></i>Watercolor</button>
-            <button class="w3-button w3-white" onclick="filterSelection('scrapbook')"><i class="fa fa-sticky-note-o w3-margin-right"></i>Scrapbook</button>
-            <button class="w3-button w3-white" onclick="filterSelection('ceramics')"><i class="fa fa-sign-language w3-margin-right"></i>Ceramics</button>
+            <button class="w3-button w3-white" onclick="filterSelection('design')"><i class="w3-margin-right"></i>Design</button>
+            <button class="w3-button w3-white" onclick="filterSelection('watercolor')"><i class="w3-margin-right"></i>Watercolor</button>
+            <button class="w3-button w3-white" onclick="filterSelection('scrapbook')"><i class="w3-margin-right"></i>Scrapbook</button>
+            <button class="w3-button w3-white" onclick="filterSelection('ceramics')"><i class="w3-margin-right"></i>Ceramics</button>
         </div>
     </div>
 
