--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!-- !PAGE CONTENT! -->
 <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
 
-    <div class="w3-section w3-bottombar w3-padding-16">
+    <div class="w3-section w3-padding-16">
     <span class="w3-margin-center">Filter:</span> 
         <div id="myBtnContainer">
             <button class="w3-button w3-black" onclick="filterSelection('all')">ALL</button>
@@ -191,6 +191,38 @@ function w3_open() {
 function w3_close() {
   document.getElementById("mySidebar").style.display = "none";
 }
+
+// filter items
+filterSelection("all")
+function filterSelection(c) {
+  x = document.getElementsByClassName("filterDiv");
+  if (c == "all") c = "";
+  for (i = 0; i < x.length; i++) {
+    if (x[i].className.indexOf(c) > -1) {
+      x[i].style.display = 'block';
+    } else {
+      x[i].style.display = 'none';
+    }
+  }  
+}
+
+// highlight chosen filter buttons
+var btnContainer = document.getElementById("myBtnContainer");
+var btns = btnContainer.getElementsByClassName("w3-button w3-white");
+var curr = btnContainer.getElementsByClassName("w3-button w3-black");
+curr[0].addEventListener("click", function(){
+    var current = document.getElementsByClassName("w3-button w3-black");
+    current[0].className = "w3-button w3-white";
+    this.className = "w3-button w3-black";
+  });
+for (var i = 0; i < btns.length; i++) {
+  btns[i].addEventListener("click", function(){
+    var current = document.getElementsByClassName("w3-button w3-black");
+    current[0].className = "w3-button w3-white";
+    this.className = "w3-button w3-black";
+  });
+}
+
 </script>
 
 </body>
