--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="w3-bar-block">
-        <a href="#portfolio" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>PORTFOLIO</a> 
+        <a href="#food" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Food</a> 
         <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i>ABOUT</a> 
         <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
     </div>
@@ -45,7 +45,7 @@
 <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
 
     <div class="w3-section w3-padding-16">
-    <span class="w3-margin-center">Filter:</span> 
+    <span class="w3-center w3-padding-16">Filter:</span> 
         <div id="myBtnContainer">
             <button class="w3-button w3-black" onclick="filterSelection('all')">ALL</button>
             <button class="w3-button w3-white" onclick="filterSelection('design')"><i class="w3-margin-right"></i>Design</button>
