--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
 <!-- Sidebar (hidden by default) -->
 <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
-    <a href="javascript:void(0)" onclick="w3_close()"
-        class="w3-bar-item w3-button">Close Menu</a>
+    <a href="javascript:void(0)" onclick="w3_close()"></a>
     
     <div class="w3-container">
         <h4><b>Izza My Shop</b></h4>
