--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 <!-- Top menu -->
 <div class="w3-top">
   <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
-    <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
     <div class="w3-center w3-padding-16">My Shop</div>
   </div>
 </div>
@@ -27,13 +26,15 @@
 <!-- !PAGE CONTENT! -->
 <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
 
+    <div class="w3-center w3-padding-16">
     <span class="w3-center w3-padding-16">Filter:</span> 
-    <div id="myBtnContainer">
-        <button class="w3-button w3-black" onclick="filterSelection('all')">ALL</button>
-        <button class="w3-button w3-white" onclick="filterSelection('design')"><i class="w3-margin-right"></i>Design</button>
-        <button class="w3-button w3-white" onclick="filterSelection('watercolor')"><i class="w3-margin-right"></i>Watercolor</button>
-        <button class="w3-button w3-white" onclick="filterSelection('scrapbook')"><i class="w3-margin-right"></i>Scrapbook</button>
-        <button class="w3-button w3-white" onclick="filterSelection('ceramics')"><i class="w3-margin-right"></i>Ceramics</button>
+        <div id="myBtnContainer">
+            <button class="w3-button w3-black" onclick="filterSelection('all')">ALL</button>
+            <button class="w3-button w3-white" onclick="filterSelection('design')"><i class="w3-margin-right"></i>Design</button>
+            <button class="w3-button w3-white" onclick="filterSelection('watercolor')"><i class="w3-margin-right"></i>Watercolor</button>
+            <button class="w3-button w3-white" onclick="filterSelection('scrapbook')"><i class="w3-margin-right"></i>Scrapbook</button>
+            <button class="w3-button w3-white" onclick="filterSelection('ceramics')"><i class="w3-margin-right"></i>Ceramics</button>
+        </div>
     </div>
 
   <!-- First Photo Grid-->
