--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
 
     <div class="w3-center w3-padding-16">
-    <span class="w3-center w3-padding-16">Filter:</span> 
+    <span class="w3-margin-right">Filter:</span> 
         <div id="myBtnContainer">
             <button class="w3-button w3-black" onclick="filterSelection('all')">ALL</button>
             <button class="w3-button w3-white" onclick="filterSelection('design')"><i class="w3-margin-right"></i>Design</button>
