--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@
 <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:50px">
 
     <div class="w3-center w3-padding-16">
-    <span class="w3-margin-right">Filter:</span> 
         <div id="myBtnContainer">
             <button class="w3-button w3-black" onclick="filterSelection('all')">ALL</button>
-            <button class="w3-button w3-white" onclick="filterSelection('design')"><i class="w3-margin-right"></i>Design</button>
-            <button class="w3-button w3-white" onclick="filterSelection('watercolor')"><i class="w3-margin-right"></i>Watercolor</button>
-            <button class="w3-button w3-white" onclick="filterSelection('scrapbook')"><i class="w3-margin-right"></i>Scrapbook</button>
-            <button class="w3-button w3-white" onclick="filterSelection('ceramics')"><i class="w3-margin-right"></i>Ceramics</button>
+            <button class="w3-button w3-white" onclick="filterSelection('design')"><i class="w3-margin-center"></i>Design</button>
+            <button class="w3-button w3-white" onclick="filterSelection('watercolor')"><i class="w3-margin-center"></i>Watercolor</button>
+            <button class="w3-button w3-white" onclick="filterSelection('scrapbook')"><i class="w3-margin-center"></i>Scrapbook</button>
+            <button class="w3-button w3-white" onclick="filterSelection('ceramics')"><i class="w3-margin-center"></i>Ceramics</button>
         </div>
     </div>
 
@@ -77,7 +76,7 @@
   <!-- Second Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center">
 
-    <div class="filterDiv watercolor">
+    <div class="filterDiv ceramics">
         <div class="w3-quarter">
             <img src="https://www.w3schools.com/w3images/popsicle.jpg" alt="Popsicle" style="width:100%">
             <h3>All I Need Is a Popsicle</h3>
@@ -85,7 +84,7 @@
         </div>
     </div>
 
-    <div class="filterDiv watercolor">
+    <div class="filterDiv ceramics">
         <div class="w3-quarter">
             <img src="https://www.w3schools.com/w3images/salmon.jpg" alt="Salmon" style="width:100%">
             <h3>Salmon For Your Skin</h3>
@@ -93,7 +92,7 @@
         </div>
     </div>
 
-    <div class="filterDiv watercolor">
+    <div class="filterDiv ceramics">
         <div class="w3-quarter">
             <img src="https://www.w3schools.com/w3images/sandwich.jpg" alt="Sandwich" style="width:100%">
             <h3>The Perfect Sandwich, A Real Classic</h3>
@@ -101,7 +100,7 @@
         </div>
     </div>
 
-    <div class="filterDiv watercolor">
+    <div class="filterDiv ceramics">
         <div class="w3-quarter">
             <img src="https://www.w3schools.com/w3images/croissant.jpg" alt="Croissant" style="width:100%">
             <h3>Le French</h3>
