--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 <!-- Sidebar (hidden by default) -->
 <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
   <div class="w3-container">
-    <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
-      <i class="fa fa-remove"></i>
+    <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" title="close menu">Close
     </a>
-    <img src="https://i.postimg.cc/kgVzcdQV/roberta-profile-pic.jpg" style="width:45%;" class="w3-round"><br><br>
     <h4><b>PORTFOLIO</b></h4>
     <p class="w3-text-grey">Roberta F. Parga Nina</p>
   </div>
