--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
 <!-- Sidebar (hidden by default) -->
 <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
   <div class="w3-container">
-    <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" title="close menu">Close
-    </a>
-    <h4><b>PORTFOLIO</b></h4>
-    <p class="w3-text-grey">Roberta F. Parga Nina</p>
+    <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding">Close</a>
+    <h4><b>Izza My Shop!</b></h4>
+    <p class="w3-text-grey">Maria Paula Parga Nina</p>
   </div>
   <div class="w3-bar-block">
     <a href="#food" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal">Food</a> 
