--- a/index.html
+++ b/index.html
@@ -14,20 +14,21 @@
 <body>
 
 <!-- Sidebar (hidden by default) -->
-<nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
-  <div class="w3-container">
-    <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding">Close</a>
-    <h4><b>Izza My Shop!</b></h4>
-    <p class="w3-text-grey">Maria Paula Parga Nina</p>
-  </div>
-  <div class="w3-bar-block">
-    <a href="#food" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal">Food</a> 
-    <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding">ABOUT</a> 
-  </div>
+<nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="display:none;z-index:3;width:25%; min-width: 300px" id="mySidebar"><br>
+    <div class="w3-container">
+        <a href="javascript:void(0)" onclick="w3_close()"
+        class="w3-bar-item w3-button">Close Menu</a>
+        <h4><b>Izza My Shop!</b></h4>
+        <p class="w3-text-grey">Maria Paula Parga Nina</p>
+    </div>
+    <div class="w3-bar-block">
+        <a href="#food" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal">Food</a> 
+        <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding">ABOUT</a> 
+    </div>
 </nav>
 
 <!-- Overlay effect when opening sidebar on small screens -->
-<div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+<!-- <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div> -->
 
 <!-- Top menu -->
 <div class="w3-top">
