--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
 
 <!-- Sidebar (hidden by default) -->
-<nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="display:none;z-index:3;width:25%; min-width: 300px" id="mySidebar"><br>
+<nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:3;width:25%; min-width: 300px" id="mySidebar"><br>
     <div class="w3-container">
         <a href="javascript:void(0)" onclick="w3_close()"
-        class="w3-bar-item w3-button">Close Menu</a>
+        class="w3-bar-item w3-button">Close</a>
         <h4><b>Izza My Shop!</b></h4>
         <p class="w3-text-grey">Maria Paula Parga Nina</p>
     </div>
