--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>
         body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         .w3-bar-block .w3-bar-item {padding:20px}
@@ -14,10 +15,10 @@
 <body>
 
 <!-- Sidebar (hidden by default) -->
-<nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:3;width:25%; min-width: 300px" id="mySidebar"><br>
+<nav class="w3-sidebar w3-bar-block w3-card w3-top w3-animate-left" style="display:none;z-index:3;width:25%; min-width: 300px" id="mySidebar"><br>
     <div class="w3-container">
         <a href="javascript:void(0)" onclick="w3_close()"
-        class="w3-bar-item w3-button">Close</a>
+        class="w3-bar-item w3-button">Close Menu</a>
         <h4><b>Izza My Shop!</b></h4>
         <p class="w3-text-grey">Maria Paula Parga Nina</p>
     </div>
