--- a/index.html
+++ b/index.html
@@ -18,11 +18,6 @@
 <nav class="w3-sidebar w3-top w3-animate-left" style="display:none;z-index:3;width:14%; min-width: 200px" id="mySidebar">
     <div class="w3-container">
         <div class="w3-button w3-padding-16 w3-right w3-center" style="font-size:x-large;" onclick="w3_close()">☰</div><br><br><br>
-        <div class="w3-center">
-            <h4><b>Izza My Shop!</b></h4>
-            <p class="w3-text-grey">Maria Paula Parga Nina</p>
-            <img src="https://i.postimg.cc/jdWyNqJB/bw.jpg" style="width:45%;" class="w3-round w3-center"><br><br>
-        </div>
         <div class="w3-bar-block w3-center">
             <a href="#items" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" style="font-size: larger">ITEMS</a> 
             <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" style="font-size: larger">ABOUT</a> 
@@ -32,7 +27,7 @@
 </nav>
 
 <!-- Overlay effect when opening sidebar on small screens -->
-<!-- <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div> -->
+<div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
 <!-- Top menu -->
 <div class="w3-top">
@@ -59,13 +54,15 @@
     <!-- First Photo Grid-->
     <div class="w3-row-padding w3-padding-16 w3-center">
 
-        <div class="filterDiv watercolor">
-            <div class="w3-quarter">
-                <img src="https://www.w3schools.com/w3images/sandwich.jpg" alt="Sandwich" style="width:100%">
-                <h3>The Perfect Sandwich, A Real NYC Classic</h3>
-                <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+        <a href="item_1.html">
+            <div class="filterDiv watercolor">
+                <div class="w3-quarter">
+                    <img src="https://www.w3schools.com/w3images/sandwich.jpg" alt="Sandwich" style="width:100%">
+                    <h3>The Perfect Sandwich, A Real NYC Classic</h3>
+                    <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+                </div>
             </div>
-        </div>
+        </a>
 
         <div class="filterDiv watercolor">
             <div class="w3-quarter">
